@@ -183,7 +183,11 @@ main(int argc, char **argv)
 {
 	int command_index;
 
-	setlocale(LC_ALL, "");
+	if (setlocale(LC_ALL, "") == NULL) {
+		fprintf(stderr, "WARNING: setting the locale failed, make "
+				"sure %s is available on your system.\n",
+				getenv("LC_ALL"));
+	}
 
 	/*
 	 * Anything before the command is considered core argument (not
