@@ -1,6 +1,7 @@
 0.7.1 Bertrand Janin <b@janin.com> (2014-02-07)
 
 	* Make charset convertion errors a little easier to spot.
+	* Warn if the current locale is not supported by the system.
 
 0.7.0 Bertrand Janin <b@janin.com> (2014-02-07)
 
